--- a/public/experience/index.html
+++ b/public/experience/index.html
@@ -25,26 +25,27 @@ Achieved 100% uptime on user-facing tools Expanded automated test coverage from 
     <meta itemprop="wordCount" content="1009">
     <title>Work Experience :: Pete Myron</title>
     <link href="/experience/index.xml" rel="alternate" type="application/rss+xml" title="Work Experience :: Pete Myron">
-    <link href="/css/auto-complete/auto-complete.min.css?1757389899" rel="stylesheet">
-    <script src="/js/auto-complete/auto-complete.min.js?1757389899" defer></script>
-    <script src="/js/search-lunr.min.js?1757389899" defer></script>
-    <script src="/js/search.min.js?1757389899" defer></script>
+    <link href="/images/favicon.ico?1757390566" rel="icon" type="image/x-icon" sizes="any">
+    <link href="/css/auto-complete/auto-complete.min.css?1757390566" rel="stylesheet">
+    <script src="/js/auto-complete/auto-complete.min.js?1757390566" defer></script>
+    <script src="/js/search-lunr.min.js?1757390566" defer></script>
+    <script src="/js/search.min.js?1757390566" defer></script>
     <script>
       window.relearn = window.relearn || {};
-      window.relearn.index_js_url="/searchindex.en.js?1757389899";
+      window.relearn.index_js_url="/searchindex.en.js?1757390566";
     </script>
-    <script src="/js/lunr/lunr.min.js?1757389899" defer></script>
-    <script src="/js/lunr/lunr.stemmer.support.min.js?1757389899" defer></script>
-    <script src="/js/lunr/lunr.multi.min.js?1757389899" defer></script>
-    <script src="/js/lunr/lunr.en.min.js?1757389899" defer></script>
+    <script src="/js/lunr/lunr.min.js?1757390566" defer></script>
+    <script src="/js/lunr/lunr.stemmer.support.min.js?1757390566" defer></script>
+    <script src="/js/lunr/lunr.multi.min.js?1757390566" defer></script>
+    <script src="/js/lunr/lunr.en.min.js?1757390566" defer></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.contentLangs=['en'];
     </script>
-    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1757389899" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1757389899" rel="stylesheet"></noscript>
-    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1757389899" rel="stylesheet">
-    <link href="/css/theme.min.css?1757389899" rel="stylesheet">
-    <link href="/css/format-html.min.css?1757389899" rel="stylesheet" id="R-format-style">
+    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1757390566" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1757390566" rel="stylesheet"></noscript>
+    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1757390566" rel="stylesheet">
+    <link href="/css/theme.min.css?1757390566" rel="stylesheet">
+    <link href="/css/format-html.min.css?1757390566" rel="stylesheet" id="R-format-style">
     <script>
       window.relearn = window.relearn || {};
       // configuration
@@ -375,8 +376,8 @@ Achieved 100% uptime on user-facing tools Expanded automated test coverage from 
 	    </div>
       </div>
     </aside>
-    <script src="/js/clipboard/clipboard.min.js?1757389899" defer></script>
-    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1757389899" defer></script>
-    <script src="/js/theme.min.js?1757389899" defer></script>
+    <script src="/js/clipboard/clipboard.min.js?1757390566" defer></script>
+    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1757390566" defer></script>
+    <script src="/js/theme.min.js?1757390566" defer></script>
   </body>
 </html>
