--- a/public/projects/other-stuff/index.html
+++ b/public/projects/other-stuff/index.html
@@ -21,26 +21,27 @@
     <meta itemprop="description" content="Inventions galore!">
     <meta itemprop="wordCount" content="80">
     <title>Other Stuff :: Pete Myron</title>
-    <link href="/css/auto-complete/auto-complete.min.css?1757389899" rel="stylesheet">
-    <script src="/js/auto-complete/auto-complete.min.js?1757389899" defer></script>
-    <script src="/js/search-lunr.min.js?1757389899" defer></script>
-    <script src="/js/search.min.js?1757389899" defer></script>
+    <link href="/images/favicon.ico?1757390566" rel="icon" type="image/x-icon" sizes="any">
+    <link href="/css/auto-complete/auto-complete.min.css?1757390566" rel="stylesheet">
+    <script src="/js/auto-complete/auto-complete.min.js?1757390566" defer></script>
+    <script src="/js/search-lunr.min.js?1757390566" defer></script>
+    <script src="/js/search.min.js?1757390566" defer></script>
     <script>
       window.relearn = window.relearn || {};
-      window.relearn.index_js_url="/searchindex.en.js?1757389899";
+      window.relearn.index_js_url="/searchindex.en.js?1757390566";
     </script>
-    <script src="/js/lunr/lunr.min.js?1757389899" defer></script>
-    <script src="/js/lunr/lunr.stemmer.support.min.js?1757389899" defer></script>
-    <script src="/js/lunr/lunr.multi.min.js?1757389899" defer></script>
-    <script src="/js/lunr/lunr.en.min.js?1757389899" defer></script>
+    <script src="/js/lunr/lunr.min.js?1757390566" defer></script>
+    <script src="/js/lunr/lunr.stemmer.support.min.js?1757390566" defer></script>
+    <script src="/js/lunr/lunr.multi.min.js?1757390566" defer></script>
+    <script src="/js/lunr/lunr.en.min.js?1757390566" defer></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.contentLangs=['en'];
     </script>
-    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1757389899" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1757389899" rel="stylesheet"></noscript>
-    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1757389899" rel="stylesheet">
-    <link href="/css/theme.min.css?1757389899" rel="stylesheet">
-    <link href="/css/format-html.min.css?1757389899" rel="stylesheet" id="R-format-style">
+    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1757390566" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1757390566" rel="stylesheet"></noscript>
+    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1757390566" rel="stylesheet">
+    <link href="/css/theme.min.css?1757390566" rel="stylesheet">
+    <link href="/css/format-html.min.css?1757390566" rel="stylesheet" id="R-format-style">
     <script>
       window.relearn = window.relearn || {};
       // configuration
@@ -164,32 +165,32 @@
 </ul>
 <hr>
 <h3 id="tech">Tech</h3>
-<p><a href="#R-image-439abe10b8b591440b5fff5012cc8a5c" class="lightbox-link"><img alt="Docker" class="inline lazy lightbox figure-image" loading="lazy" src="/images/docker-logo.svg?classes=inline&width=10vw" style=" height: auto; width: 10vw;" title="Docker logo"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-439abe10b8b591440b5fff5012cc8a5c"><img alt="Docker" class="inline lazy lightbox lightbox-image" loading="lazy" src="/images/docker-logo.svg?classes=inline&width=10vw" title="Docker logo"></a></p>
-<p><a href="#R-image-5ac8819b0d5b90164c59df1909f7c3b6" class="lightbox-link"><img alt="Nginx" class="inline lazy lightbox figure-image" loading="lazy" src="/images/nginx-logo.svg?classes=inline&width=10vw" style=" height: auto; width: 10vw;" title="Nginx logo"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-5ac8819b0d5b90164c59df1909f7c3b6"><img alt="Nginx" class="inline lazy lightbox lightbox-image" loading="lazy" src="/images/nginx-logo.svg?classes=inline&width=10vw" title="Nginx logo"></a></p>
-<p><a href="#R-image-a10963ab4277fa26dac73b3d8884440e" class="lightbox-link"><img alt="Traefik" class="inline lazy lightbox figure-image" loading="lazy" src="/images/traefik-proxy-logo.svg?classes=inline&width=10vw" style=" height: auto; width: 10vw;" title="Traefik logo"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-a10963ab4277fa26dac73b3d8884440e"><img alt="Traefik" class="inline lazy lightbox lightbox-image" loading="lazy" src="/images/traefik-proxy-logo.svg?classes=inline&width=10vw" title="Traefik logo"></a></p>
-<p><a href="#R-image-13dd6ff36fda02aebf435da33eb49619" class="lightbox-link"><img alt="Selenium Grid" class="inline lazy lightbox figure-image" loading="lazy" src="/images/selenium-grid-logo.svg?classes=inline&width=10vh" style=" height: auto; width: 10vh;" title="Selenium Grid logo"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-13dd6ff36fda02aebf435da33eb49619"><img alt="Selenium Grid" class="inline lazy lightbox lightbox-image" loading="lazy" src="/images/selenium-grid-logo.svg?classes=inline&width=10vh" title="Selenium Grid logo"></a></p>
-<p><a href="#R-image-9fb7c084c3752803b881b95f03512e38" class="lightbox-link"><img alt="InfluxDB" class="inline lazy lightbox figure-image" loading="lazy" src="/images/influxdb-logo.svg?classes=inline&width=10vw" style=" height: auto; width: 10vw;" title="InfluxDB logo"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-9fb7c084c3752803b881b95f03512e38"><img alt="InfluxDB" class="inline lazy lightbox lightbox-image" loading="lazy" src="/images/influxdb-logo.svg?classes=inline&width=10vw" title="InfluxDB logo"></a></p>
-<p><a href="#R-image-98e6acd647de82289de9496bc4a8b543" class="lightbox-link"><img alt="Grafana" class="inline lazy lightbox figure-image" loading="lazy" src="/images/grafana-logo.svg?classes=inline&width=10vh" style=" height: auto; width: 10vh;" title="Grafana logo"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-98e6acd647de82289de9496bc4a8b543"><img alt="Grafana" class="inline lazy lightbox lightbox-image" loading="lazy" src="/images/grafana-logo.svg?classes=inline&width=10vh" title="Grafana logo"></a></p>
-<p><a href="#R-image-630ac0d96dec76ddf3248bdb54d105a4" class="lightbox-link"><img alt="aws" class="inline lazy lightbox figure-image" loading="lazy" src="/images/aws-logo.svg?classes=inline&width=10vh" style=" height: auto; width: 10vh;" title="AWS logo"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-630ac0d96dec76ddf3248bdb54d105a4"><img alt="aws" class="inline lazy lightbox lightbox-image" loading="lazy" src="/images/aws-logo.svg?classes=inline&width=10vh" title="AWS logo"></a></p>
-<p><a href="#R-image-b8cc3212a0a53cdb1e46b8c5d3c17df3" class="lightbox-link"><img alt="Ansible" class="inline lazy lightbox figure-image" loading="lazy" src="/images/ansible-logo.svg?classes=inline&width=10vh" style=" height: auto; width: 10vh;" title="Ansible logo"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-b8cc3212a0a53cdb1e46b8c5d3c17df3"><img alt="Ansible" class="inline lazy lightbox lightbox-image" loading="lazy" src="/images/ansible-logo.svg?classes=inline&width=10vh" title="Ansible logo"></a></p>
-<p><a href="#R-image-858853c01a165cec739ee50b8e64d6dd" class="lightbox-link"><img alt="Amazon Alexa" class="inline lazy lightbox figure-image" loading="lazy" src="/images/amazon-alexa-logo.svg?classes=inline&width=10vh" style=" height: auto; width: 10vh;" title="Amazon Alexa logo"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-858853c01a165cec739ee50b8e64d6dd"><img alt="Amazon Alexa" class="inline lazy lightbox lightbox-image" loading="lazy" src="/images/amazon-alexa-logo.svg?classes=inline&width=10vh" title="Amazon Alexa logo"></a></p>
-<p><a href="#R-image-b55a903459dc800136ca5881387dd801" class="lightbox-link"><img alt="Python" class="inline lazy lightbox figure-image" loading="lazy" src="/images/python-logo.svg?classes=inline&width=10vh" style=" height: auto; width: 10vh;" title="Python logo"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-b55a903459dc800136ca5881387dd801"><img alt="Python" class="inline lazy lightbox lightbox-image" loading="lazy" src="/images/python-logo.svg?classes=inline&width=10vh" title="Python logo"></a></p>
-<p><a href="#R-image-702a0ada4917f15f57beed1c0e842b48" class="lightbox-link"><img alt="CSharp" class="inline lazy lightbox figure-image" loading="lazy" src="/images/csharp-logo.svg?classes=inline&width=10vh" style=" height: auto; width: 10vh;" title="CSharp logo"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-702a0ada4917f15f57beed1c0e842b48"><img alt="CSharp" class="inline lazy lightbox lightbox-image" loading="lazy" src="/images/csharp-logo.svg?classes=inline&width=10vh" title="CSharp logo"></a></p>
-<p><a href="#R-image-f9afaa4e96ee241f987427d20071fa24" class="lightbox-link"><img alt="NodeJS" class="inline lazy lightbox figure-image" loading="lazy" src="/images/nodejs-logo.svg?classes=inline&width=10vh" style=" height: auto; width: 10vh;" title="NodeJS logo"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-f9afaa4e96ee241f987427d20071fa24"><img alt="NodeJS" class="inline lazy lightbox lightbox-image" loading="lazy" src="/images/nodejs-logo.svg?classes=inline&width=10vh" title="NodeJS logo"></a></p>
-<p><a href="#R-image-60be3f5349493965f178f64367aed406" class="lightbox-link"><img alt="Swagger" class="inline lazy lightbox figure-image" loading="lazy" src="/images/swagger-logo.png?classes=inline&width=10vh" style=" height: auto; width: 10vh;" title="Swagger logo"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-60be3f5349493965f178f64367aed406"><img alt="Swagger" class="inline lazy lightbox lightbox-image" loading="lazy" src="/images/swagger-logo.png?classes=inline&width=10vh" title="Swagger logo"></a></p>
+<p><a href="#R-image-ae1dfd6056497b4d35e32c15e8b01657" class="lightbox-link"><img alt="Docker" class="inline lazy lightbox figure-image" loading="lazy" src="/images/docker-logo.svg?classes=inline&width=10vw" style=" height: auto; width: 10vw;" title="Docker logo"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-ae1dfd6056497b4d35e32c15e8b01657"><img alt="Docker" class="inline lazy lightbox lightbox-image" loading="lazy" src="/images/docker-logo.svg?classes=inline&width=10vw" title="Docker logo"></a></p>
+<p><a href="#R-image-5347dbd6c9f6d0ceeb2a942444840e2c" class="lightbox-link"><img alt="Nginx" class="inline lazy lightbox figure-image" loading="lazy" src="/images/nginx-logo.svg?classes=inline&width=10vw" style=" height: auto; width: 10vw;" title="Nginx logo"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-5347dbd6c9f6d0ceeb2a942444840e2c"><img alt="Nginx" class="inline lazy lightbox lightbox-image" loading="lazy" src="/images/nginx-logo.svg?classes=inline&width=10vw" title="Nginx logo"></a></p>
+<p><a href="#R-image-a03eea9fc9c1086d48491ed86df6bea5" class="lightbox-link"><img alt="Traefik" class="inline lazy lightbox figure-image" loading="lazy" src="/images/traefik-proxy-logo.svg?classes=inline&width=10vw" style=" height: auto; width: 10vw;" title="Traefik logo"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-a03eea9fc9c1086d48491ed86df6bea5"><img alt="Traefik" class="inline lazy lightbox lightbox-image" loading="lazy" src="/images/traefik-proxy-logo.svg?classes=inline&width=10vw" title="Traefik logo"></a></p>
+<p><a href="#R-image-9855c60904f4d9f230c74743006b85aa" class="lightbox-link"><img alt="Selenium Grid" class="inline lazy lightbox figure-image" loading="lazy" src="/images/selenium-grid-logo.svg?classes=inline&width=10vh" style=" height: auto; width: 10vh;" title="Selenium Grid logo"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-9855c60904f4d9f230c74743006b85aa"><img alt="Selenium Grid" class="inline lazy lightbox lightbox-image" loading="lazy" src="/images/selenium-grid-logo.svg?classes=inline&width=10vh" title="Selenium Grid logo"></a></p>
+<p><a href="#R-image-f09cdcd9f0f149fe474ef0c9ddc27183" class="lightbox-link"><img alt="InfluxDB" class="inline lazy lightbox figure-image" loading="lazy" src="/images/influxdb-logo.svg?classes=inline&width=10vw" style=" height: auto; width: 10vw;" title="InfluxDB logo"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-f09cdcd9f0f149fe474ef0c9ddc27183"><img alt="InfluxDB" class="inline lazy lightbox lightbox-image" loading="lazy" src="/images/influxdb-logo.svg?classes=inline&width=10vw" title="InfluxDB logo"></a></p>
+<p><a href="#R-image-09796f9c2a4fd002a42821bfac2a14d2" class="lightbox-link"><img alt="Grafana" class="inline lazy lightbox figure-image" loading="lazy" src="/images/grafana-logo.svg?classes=inline&width=10vh" style=" height: auto; width: 10vh;" title="Grafana logo"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-09796f9c2a4fd002a42821bfac2a14d2"><img alt="Grafana" class="inline lazy lightbox lightbox-image" loading="lazy" src="/images/grafana-logo.svg?classes=inline&width=10vh" title="Grafana logo"></a></p>
+<p><a href="#R-image-dc4321b6efa18b7fcc952563d0d5ddc9" class="lightbox-link"><img alt="aws" class="inline lazy lightbox figure-image" loading="lazy" src="/images/aws-logo.svg?classes=inline&width=10vh" style=" height: auto; width: 10vh;" title="AWS logo"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-dc4321b6efa18b7fcc952563d0d5ddc9"><img alt="aws" class="inline lazy lightbox lightbox-image" loading="lazy" src="/images/aws-logo.svg?classes=inline&width=10vh" title="AWS logo"></a></p>
+<p><a href="#R-image-692a212a481028aca61853d4acc4d80b" class="lightbox-link"><img alt="Ansible" class="inline lazy lightbox figure-image" loading="lazy" src="/images/ansible-logo.svg?classes=inline&width=10vh" style=" height: auto; width: 10vh;" title="Ansible logo"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-692a212a481028aca61853d4acc4d80b"><img alt="Ansible" class="inline lazy lightbox lightbox-image" loading="lazy" src="/images/ansible-logo.svg?classes=inline&width=10vh" title="Ansible logo"></a></p>
+<p><a href="#R-image-1c7a313d2952d890d06d429b043fe13d" class="lightbox-link"><img alt="Amazon Alexa" class="inline lazy lightbox figure-image" loading="lazy" src="/images/amazon-alexa-logo.svg?classes=inline&width=10vh" style=" height: auto; width: 10vh;" title="Amazon Alexa logo"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-1c7a313d2952d890d06d429b043fe13d"><img alt="Amazon Alexa" class="inline lazy lightbox lightbox-image" loading="lazy" src="/images/amazon-alexa-logo.svg?classes=inline&width=10vh" title="Amazon Alexa logo"></a></p>
+<p><a href="#R-image-0f07db914e10edfa88097bca39e942b2" class="lightbox-link"><img alt="Python" class="inline lazy lightbox figure-image" loading="lazy" src="/images/python-logo.svg?classes=inline&width=10vh" style=" height: auto; width: 10vh;" title="Python logo"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-0f07db914e10edfa88097bca39e942b2"><img alt="Python" class="inline lazy lightbox lightbox-image" loading="lazy" src="/images/python-logo.svg?classes=inline&width=10vh" title="Python logo"></a></p>
+<p><a href="#R-image-afc853b01d5b55ad4f8d0e9ccfa78543" class="lightbox-link"><img alt="CSharp" class="inline lazy lightbox figure-image" loading="lazy" src="/images/csharp-logo.svg?classes=inline&width=10vh" style=" height: auto; width: 10vh;" title="CSharp logo"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-afc853b01d5b55ad4f8d0e9ccfa78543"><img alt="CSharp" class="inline lazy lightbox lightbox-image" loading="lazy" src="/images/csharp-logo.svg?classes=inline&width=10vh" title="CSharp logo"></a></p>
+<p><a href="#R-image-6660d7e70f1f68e9c973a4588e4291c5" class="lightbox-link"><img alt="NodeJS" class="inline lazy lightbox figure-image" loading="lazy" src="/images/nodejs-logo.svg?classes=inline&width=10vh" style=" height: auto; width: 10vh;" title="NodeJS logo"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-6660d7e70f1f68e9c973a4588e4291c5"><img alt="NodeJS" class="inline lazy lightbox lightbox-image" loading="lazy" src="/images/nodejs-logo.svg?classes=inline&width=10vh" title="NodeJS logo"></a></p>
+<p><a href="#R-image-b72d3c2fae8426997e13072748fed8db" class="lightbox-link"><img alt="Swagger" class="inline lazy lightbox figure-image" loading="lazy" src="/images/swagger-logo.png?classes=inline&width=10vh" style=" height: auto; width: 10vh;" title="Swagger logo"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-b72d3c2fae8426997e13072748fed8db"><img alt="Swagger" class="inline lazy lightbox lightbox-image" loading="lazy" src="/images/swagger-logo.png?classes=inline&width=10vh" title="Swagger logo"></a></p>
 
   <footer class="footline">
   </footer>
@@ -334,8 +335,8 @@
 	    </div>
       </div>
     </aside>
-    <script src="/js/clipboard/clipboard.min.js?1757389899" defer></script>
-    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1757389899" defer></script>
-    <script src="/js/theme.min.js?1757389899" defer></script>
+    <script src="/js/clipboard/clipboard.min.js?1757390566" defer></script>
+    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1757390566" defer></script>
+    <script src="/js/theme.min.js?1757390566" defer></script>
   </body>
 </html>
