--- a/public/projects/sitespeed/index.html
+++ b/public/projects/sitespeed/index.html
@@ -21,26 +21,27 @@
     <meta itemprop="description" content="A website performance monitoring tool">
     <meta itemprop="wordCount" content="38">
     <title>Sitespeed :: Pete Myron</title>
-    <link href="/css/auto-complete/auto-complete.min.css?1757389899" rel="stylesheet">
-    <script src="/js/auto-complete/auto-complete.min.js?1757389899" defer></script>
-    <script src="/js/search-lunr.min.js?1757389899" defer></script>
-    <script src="/js/search.min.js?1757389899" defer></script>
+    <link href="/images/favicon.ico?1757390566" rel="icon" type="image/x-icon" sizes="any">
+    <link href="/css/auto-complete/auto-complete.min.css?1757390566" rel="stylesheet">
+    <script src="/js/auto-complete/auto-complete.min.js?1757390566" defer></script>
+    <script src="/js/search-lunr.min.js?1757390566" defer></script>
+    <script src="/js/search.min.js?1757390566" defer></script>
     <script>
       window.relearn = window.relearn || {};
-      window.relearn.index_js_url="/searchindex.en.js?1757389899";
+      window.relearn.index_js_url="/searchindex.en.js?1757390566";
     </script>
-    <script src="/js/lunr/lunr.min.js?1757389899" defer></script>
-    <script src="/js/lunr/lunr.stemmer.support.min.js?1757389899" defer></script>
-    <script src="/js/lunr/lunr.multi.min.js?1757389899" defer></script>
-    <script src="/js/lunr/lunr.en.min.js?1757389899" defer></script>
+    <script src="/js/lunr/lunr.min.js?1757390566" defer></script>
+    <script src="/js/lunr/lunr.stemmer.support.min.js?1757390566" defer></script>
+    <script src="/js/lunr/lunr.multi.min.js?1757390566" defer></script>
+    <script src="/js/lunr/lunr.en.min.js?1757390566" defer></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.contentLangs=['en'];
     </script>
-    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1757389899" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1757389899" rel="stylesheet"></noscript>
-    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1757389899" rel="stylesheet">
-    <link href="/css/theme.min.css?1757389899" rel="stylesheet">
-    <link href="/css/format-html.min.css?1757389899" rel="stylesheet" id="R-format-style">
+    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1757390566" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1757390566" rel="stylesheet"></noscript>
+    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1757390566" rel="stylesheet">
+    <link href="/css/theme.min.css?1757390566" rel="stylesheet">
+    <link href="/css/format-html.min.css?1757390566" rel="stylesheet" id="R-format-style">
     <script>
       window.relearn = window.relearn || {};
       // configuration
@@ -148,29 +149,29 @@
 
 <h1 id="sitespeed">Sitespeed</h1>
 
-<h1 id="sitespeedimagessitespeed-logopngclassesinlinewidth10vh-sitespeed-logohttpsgithubcomsitespeediositespeedio"><a href="https://github.com/sitespeedio/sitespeed.io" rel="external" target="_blank"><a href="#R-image-c9cb9a099b835f8fec16c46a75c6cacd" class="lightbox-link"><img alt="sitespeed" class="inline lazy lightbox figure-image" loading="lazy" src="/images/sitespeed-logo.png?classes=inline&width=10vh" style=" height: auto; width: 10vh;" title="sitespeed logo"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-c9cb9a099b835f8fec16c46a75c6cacd"><img alt="sitespeed" class="inline lazy lightbox lightbox-image" loading="lazy" src="/images/sitespeed-logo.png?classes=inline&width=10vh" title="sitespeed logo"></a></a></h1>
+<h1 id="sitespeedimagessitespeed-logopngclassesinlinewidth10vh-sitespeed-logohttpsgithubcomsitespeediositespeedio"><a href="https://github.com/sitespeedio/sitespeed.io" rel="external" target="_blank"><a href="#R-image-597e93aba128fc4f4d7677b6a422b5e5" class="lightbox-link"><img alt="sitespeed" class="inline lazy lightbox figure-image" loading="lazy" src="/images/sitespeed-logo.png?classes=inline&width=10vh" style=" height: auto; width: 10vh;" title="sitespeed logo"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-597e93aba128fc4f4d7677b6a422b5e5"><img alt="sitespeed" class="inline lazy lightbox lightbox-image" loading="lazy" src="/images/sitespeed-logo.png?classes=inline&width=10vh" title="sitespeed logo"></a></a></h1>
 <p><a href="https://sitespeed.io" rel="external" target="_blank"><i class="fab fa-fw fa-github"></i> Sitespeed</a> is an opensource website performance and monitoring tool, which I also configured to be used for tracking availability. Several AWS EC2 instances were deployed in each of the four US regions and later moved to Kubernetes.</p>
-<p><a href="#R-image-ec9ba6e646fd91927b57264be29e1bb1" class="lightbox-link"><img alt="Grafana visualization of Sitespeed output" class="lazy lightbox figure-image" loading="lazy" src="/images/sitespeed-1.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-ec9ba6e646fd91927b57264be29e1bb1"><img alt="Grafana visualization of Sitespeed output" class="lazy lightbox lightbox-image" loading="lazy" src="/images/sitespeed-1.png"></a>
-<a href="#R-image-a296cdc743a455e8f6f8cd8ff51201a3" class="lightbox-link"><img alt="Grafana visualization of Sitespeed output" class="lazy lightbox figure-image" loading="lazy" src="/images/sitespeed-2.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-a296cdc743a455e8f6f8cd8ff51201a3"><img alt="Grafana visualization of Sitespeed output" class="lazy lightbox lightbox-image" loading="lazy" src="/images/sitespeed-2.png"></a></p>
+<p><a href="#R-image-82dc19437d9203a5f369ef09c74d91ac" class="lightbox-link"><img alt="Grafana visualization of Sitespeed output" class="lazy lightbox figure-image" loading="lazy" src="/images/sitespeed-1.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-82dc19437d9203a5f369ef09c74d91ac"><img alt="Grafana visualization of Sitespeed output" class="lazy lightbox lightbox-image" loading="lazy" src="/images/sitespeed-1.png"></a>
+<a href="#R-image-9230c6704a83e60fecca406696b9e19a" class="lightbox-link"><img alt="Grafana visualization of Sitespeed output" class="lazy lightbox figure-image" loading="lazy" src="/images/sitespeed-2.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-9230c6704a83e60fecca406696b9e19a"><img alt="Grafana visualization of Sitespeed output" class="lazy lightbox lightbox-image" loading="lazy" src="/images/sitespeed-2.png"></a></p>
 <hr>
 <h3 id="tech">Tech</h3>
-<p><a href="#R-image-6c956aee73148a0ade58a8b5c907c2dc" class="lightbox-link"><img alt="Docker" class="inline lazy lightbox figure-image" loading="lazy" src="/images/docker-logo.svg?classes=inline&width=10vw" style=" height: auto; width: 10vw;" title="Docker logo"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-6c956aee73148a0ade58a8b5c907c2dc"><img alt="Docker" class="inline lazy lightbox lightbox-image" loading="lazy" src="/images/docker-logo.svg?classes=inline&width=10vw" title="Docker logo"></a></p>
-<p><a href="#R-image-cca93ae0e9d37405d820622b04a21d9d" class="lightbox-link"><img alt="Kubernetes" class="inline lazy lightbox figure-image" loading="lazy" src="/images/k8s-logo.svg?classes=inline&width=10vw" style=" height: auto; width: 10vw;" title="Kubernetes logo"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-cca93ae0e9d37405d820622b04a21d9d"><img alt="Kubernetes" class="inline lazy lightbox lightbox-image" loading="lazy" src="/images/k8s-logo.svg?classes=inline&width=10vw" title="Kubernetes logo"></a></p>
-<p><a href="#R-image-9cc4fb62ba971eb883ce219d6bcfdca1" class="lightbox-link"><img alt="NodeJS" class="inline lazy lightbox figure-image" loading="lazy" src="/images/nodejs-logo.svg?classes=inline&width=10vh" style=" height: auto; width: 10vh;" title="Node.JS logo"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-9cc4fb62ba971eb883ce219d6bcfdca1"><img alt="NodeJS" class="inline lazy lightbox lightbox-image" loading="lazy" src="/images/nodejs-logo.svg?classes=inline&width=10vh" title="Node.JS logo"></a></p>
-<p><a href="#R-image-e3de0f244486eb01ab20b852dcb98ef8" class="lightbox-link"><img alt="InfluxDB" class="inline lazy lightbox figure-image" loading="lazy" src="/images/influxdb-logo.svg?classes=inline&width=10vw" style=" height: auto; width: 10vw;" title="InfluxDB logo"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-e3de0f244486eb01ab20b852dcb98ef8"><img alt="InfluxDB" class="inline lazy lightbox lightbox-image" loading="lazy" src="/images/influxdb-logo.svg?classes=inline&width=10vw" title="InfluxDB logo"></a></p>
-<p><a href="#R-image-361da68d53800fbac495e848414b1b2b" class="lightbox-link"><img alt="Ansible" class="inline lazy lightbox figure-image" loading="lazy" src="/images/ansible-logo.svg?classes=inline&width=10vh" style=" height: auto; width: 10vh;" title="Ansible logo"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-361da68d53800fbac495e848414b1b2b"><img alt="Ansible" class="inline lazy lightbox lightbox-image" loading="lazy" src="/images/ansible-logo.svg?classes=inline&width=10vh" title="Ansible logo"></a></p>
-<p><a href="#R-image-33ca6d905c7d0515cc2adc636dbbe823" class="lightbox-link"><img alt="Grafana" class="inline lazy lightbox figure-image" loading="lazy" src="/images/grafana-logo.svg?classes=inline&width=10vh" style=" height: auto; width: 10vh;" title="Grafana logo"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-33ca6d905c7d0515cc2adc636dbbe823"><img alt="Grafana" class="inline lazy lightbox lightbox-image" loading="lazy" src="/images/grafana-logo.svg?classes=inline&width=10vh" title="Grafana logo"></a></p>
-<p><a href="#R-image-a7262034550f3dd3960aa1e97848ad03" class="lightbox-link"><img alt="aws" class="inline lazy lightbox figure-image" loading="lazy" src="/images/aws-logo.svg?classes=inline&width=10vh" style=" height: auto; width: 10vh;" title="AWS logo"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-a7262034550f3dd3960aa1e97848ad03"><img alt="aws" class="inline lazy lightbox lightbox-image" loading="lazy" src="/images/aws-logo.svg?classes=inline&width=10vh" title="AWS logo"></a></p>
+<p><a href="#R-image-03743dfd33b08e41c79ca60cfecd9a12" class="lightbox-link"><img alt="Docker" class="inline lazy lightbox figure-image" loading="lazy" src="/images/docker-logo.svg?classes=inline&width=10vw" style=" height: auto; width: 10vw;" title="Docker logo"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-03743dfd33b08e41c79ca60cfecd9a12"><img alt="Docker" class="inline lazy lightbox lightbox-image" loading="lazy" src="/images/docker-logo.svg?classes=inline&width=10vw" title="Docker logo"></a></p>
+<p><a href="#R-image-fd5ce6befd3f481fea23777f7fcff876" class="lightbox-link"><img alt="Kubernetes" class="inline lazy lightbox figure-image" loading="lazy" src="/images/k8s-logo.svg?classes=inline&width=10vw" style=" height: auto; width: 10vw;" title="Kubernetes logo"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-fd5ce6befd3f481fea23777f7fcff876"><img alt="Kubernetes" class="inline lazy lightbox lightbox-image" loading="lazy" src="/images/k8s-logo.svg?classes=inline&width=10vw" title="Kubernetes logo"></a></p>
+<p><a href="#R-image-567dfafc66682ee67cee618c0c8b9c7f" class="lightbox-link"><img alt="NodeJS" class="inline lazy lightbox figure-image" loading="lazy" src="/images/nodejs-logo.svg?classes=inline&width=10vh" style=" height: auto; width: 10vh;" title="Node.JS logo"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-567dfafc66682ee67cee618c0c8b9c7f"><img alt="NodeJS" class="inline lazy lightbox lightbox-image" loading="lazy" src="/images/nodejs-logo.svg?classes=inline&width=10vh" title="Node.JS logo"></a></p>
+<p><a href="#R-image-a05a272965b3e93277d3721f49b63ca3" class="lightbox-link"><img alt="InfluxDB" class="inline lazy lightbox figure-image" loading="lazy" src="/images/influxdb-logo.svg?classes=inline&width=10vw" style=" height: auto; width: 10vw;" title="InfluxDB logo"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-a05a272965b3e93277d3721f49b63ca3"><img alt="InfluxDB" class="inline lazy lightbox lightbox-image" loading="lazy" src="/images/influxdb-logo.svg?classes=inline&width=10vw" title="InfluxDB logo"></a></p>
+<p><a href="#R-image-0868a8b5f8c9f917461d00614cd34744" class="lightbox-link"><img alt="Ansible" class="inline lazy lightbox figure-image" loading="lazy" src="/images/ansible-logo.svg?classes=inline&width=10vh" style=" height: auto; width: 10vh;" title="Ansible logo"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-0868a8b5f8c9f917461d00614cd34744"><img alt="Ansible" class="inline lazy lightbox lightbox-image" loading="lazy" src="/images/ansible-logo.svg?classes=inline&width=10vh" title="Ansible logo"></a></p>
+<p><a href="#R-image-c3f2f3bc9a2ce86502a50331842cfe98" class="lightbox-link"><img alt="Grafana" class="inline lazy lightbox figure-image" loading="lazy" src="/images/grafana-logo.svg?classes=inline&width=10vh" style=" height: auto; width: 10vh;" title="Grafana logo"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-c3f2f3bc9a2ce86502a50331842cfe98"><img alt="Grafana" class="inline lazy lightbox lightbox-image" loading="lazy" src="/images/grafana-logo.svg?classes=inline&width=10vh" title="Grafana logo"></a></p>
+<p><a href="#R-image-4be05651049bef3b3cdc716acbb9b174" class="lightbox-link"><img alt="aws" class="inline lazy lightbox figure-image" loading="lazy" src="/images/aws-logo.svg?classes=inline&width=10vh" style=" height: auto; width: 10vh;" title="AWS logo"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-4be05651049bef3b3cdc716acbb9b174"><img alt="aws" class="inline lazy lightbox lightbox-image" loading="lazy" src="/images/aws-logo.svg?classes=inline&width=10vh" title="AWS logo"></a></p>
 
   <footer class="footline">
   </footer>
@@ -315,8 +316,8 @@
 	    </div>
       </div>
     </aside>
-    <script src="/js/clipboard/clipboard.min.js?1757389899" defer></script>
-    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1757389899" defer></script>
-    <script src="/js/theme.min.js?1757389899" defer></script>
+    <script src="/js/clipboard/clipboard.min.js?1757390566" defer></script>
+    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1757390566" defer></script>
+    <script src="/js/theme.min.js?1757390566" defer></script>
   </body>
 </html>
