--- a/public/projects/device-matrix/index.html
+++ b/public/projects/device-matrix/index.html
@@ -21,26 +21,27 @@
     <meta itemprop="description" content="Remote, real device access and automation">
     <meta itemprop="wordCount" content="67">
     <title>Device Matrix :: Pete Myron</title>
-    <link href="/css/auto-complete/auto-complete.min.css?1757389899" rel="stylesheet">
-    <script src="/js/auto-complete/auto-complete.min.js?1757389899" defer></script>
-    <script src="/js/search-lunr.min.js?1757389899" defer></script>
-    <script src="/js/search.min.js?1757389899" defer></script>
+    <link href="/images/favicon.ico?1757390566" rel="icon" type="image/x-icon" sizes="any">
+    <link href="/css/auto-complete/auto-complete.min.css?1757390566" rel="stylesheet">
+    <script src="/js/auto-complete/auto-complete.min.js?1757390566" defer></script>
+    <script src="/js/search-lunr.min.js?1757390566" defer></script>
+    <script src="/js/search.min.js?1757390566" defer></script>
     <script>
       window.relearn = window.relearn || {};
-      window.relearn.index_js_url="/searchindex.en.js?1757389899";
+      window.relearn.index_js_url="/searchindex.en.js?1757390566";
     </script>
-    <script src="/js/lunr/lunr.min.js?1757389899" defer></script>
-    <script src="/js/lunr/lunr.stemmer.support.min.js?1757389899" defer></script>
-    <script src="/js/lunr/lunr.multi.min.js?1757389899" defer></script>
-    <script src="/js/lunr/lunr.en.min.js?1757389899" defer></script>
+    <script src="/js/lunr/lunr.min.js?1757390566" defer></script>
+    <script src="/js/lunr/lunr.stemmer.support.min.js?1757390566" defer></script>
+    <script src="/js/lunr/lunr.multi.min.js?1757390566" defer></script>
+    <script src="/js/lunr/lunr.en.min.js?1757390566" defer></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.contentLangs=['en'];
     </script>
-    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1757389899" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1757389899" rel="stylesheet"></noscript>
-    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1757389899" rel="stylesheet">
-    <link href="/css/theme.min.css?1757389899" rel="stylesheet">
-    <link href="/css/format-html.min.css?1757389899" rel="stylesheet" id="R-format-style">
+    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1757390566" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1757390566" rel="stylesheet"></noscript>
+    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1757390566" rel="stylesheet">
+    <link href="/css/theme.min.css?1757390566" rel="stylesheet">
+    <link href="/css/format-html.min.css?1757390566" rel="stylesheet" id="R-format-style">
     <script>
       window.relearn = window.relearn || {};
       // configuration
@@ -148,8 +149,8 @@
 
 <h1 id="device-matrix">Device Matrix</h1>
 
-<p><a href="#R-image-c978273a9a9cab656a55e3a7e5f6be94" class="lightbox-link"><img alt="Device Matrix logo" class="lazy lightbox figure-image" loading="lazy" src="/images/device_matrix_logo_light.svg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-c978273a9a9cab656a55e3a7e5f6be94"><img alt="Device Matrix logo" class="lazy lightbox lightbox-image" loading="lazy" src="/images/device_matrix_logo_light.svg"></a></p>
+<p><a href="#R-image-8dd2f49f3b7403026c3e9ded2879d01e" class="lightbox-link"><img alt="Device Matrix logo" class="lazy lightbox figure-image" loading="lazy" src="/images/device_matrix_logo_light.svg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-8dd2f49f3b7403026c3e9ded2879d01e"><img alt="Device Matrix logo" class="lazy lightbox lightbox-image" loading="lazy" src="/images/device_matrix_logo_light.svg"></a></p>
 <ul>
 <li>Manual &amp; API access to real hardware devices on an authentic mobile network</li>
 <li>Complete remote device control, CI/CD/CT automation support</li>
@@ -162,26 +163,26 @@
 <li>Run remote shell commands</li>
 <li>Debug remotely with Android Studio, Chrome Debug Tools, etc.</li>
 </ul>
-<p><a href="#R-image-db153cc605790605f9a334b3bea4e759" class="lightbox-link"><img alt="Device Matrix Android" class="inline lazy lightbox figure-image" loading="lazy" src="/images/lab-1.jpg?classes=inline&width=50vh" style=" height: auto; width: 50vh;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-db153cc605790605f9a334b3bea4e759"><img alt="Device Matrix Android" class="inline lazy lightbox lightbox-image" loading="lazy" src="/images/lab-1.jpg?classes=inline&width=50vh"></a>
-<a href="#R-image-ddc2451a7858f45332ee976037e66758" class="lightbox-link"><img alt="Device Matrix iOS" class="inline lazy lightbox figure-image" loading="lazy" src="/images/lab-2.jpg?classes=inline&width=50vh" style=" height: auto; width: 50vh;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-ddc2451a7858f45332ee976037e66758"><img alt="Device Matrix iOS" class="inline lazy lightbox lightbox-image" loading="lazy" src="/images/lab-2.jpg?classes=inline&width=50vh"></a></p>
+<p><a href="#R-image-35f277c708289f66a4094fb448abc3f9" class="lightbox-link"><img alt="Device Matrix Android" class="inline lazy lightbox figure-image" loading="lazy" src="/images/lab-1.jpg?classes=inline&width=50vh" style=" height: auto; width: 50vh;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-35f277c708289f66a4094fb448abc3f9"><img alt="Device Matrix Android" class="inline lazy lightbox lightbox-image" loading="lazy" src="/images/lab-1.jpg?classes=inline&width=50vh"></a>
+<a href="#R-image-106b299981058ac64ab011e945acf7d0" class="lightbox-link"><img alt="Device Matrix iOS" class="inline lazy lightbox figure-image" loading="lazy" src="/images/lab-2.jpg?classes=inline&width=50vh" style=" height: auto; width: 50vh;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-106b299981058ac64ab011e945acf7d0"><img alt="Device Matrix iOS" class="inline lazy lightbox lightbox-image" loading="lazy" src="/images/lab-2.jpg?classes=inline&width=50vh"></a></p>
 <hr>
 <h3 id="tech">Tech</h3>
-<p><a href="#R-image-f8a4697d1d26c4acbd104898478543d0" class="lightbox-link"><img alt="Docker" class="inline lazy lightbox figure-image" loading="lazy" src="/images/docker-logo.svg?classes=inline&width=10vw" style=" height: auto; width: 10vw;" title="Docker logo"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-f8a4697d1d26c4acbd104898478543d0"><img alt="Docker" class="inline lazy lightbox lightbox-image" loading="lazy" src="/images/docker-logo.svg?classes=inline&width=10vw" title="Docker logo"></a></p>
-<p><a href="#R-image-ba81c0252ca7ae6f1d8ea15050083cab" class="lightbox-link"><img alt="InfluxDB" class="inline lazy lightbox figure-image" loading="lazy" src="/images/influxdb-logo.svg?classes=inline&width=10vw" style=" height: auto; width: 10vw;" title="InfluxDB logo"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-ba81c0252ca7ae6f1d8ea15050083cab"><img alt="InfluxDB" class="inline lazy lightbox lightbox-image" loading="lazy" src="/images/influxdb-logo.svg?classes=inline&width=10vw" title="InfluxDB logo"></a></p>
-<p><a href="#R-image-a0191c600cd7867fabee28e3c166f363" class="lightbox-link"><img alt="Ansible" class="inline lazy lightbox figure-image" loading="lazy" src="/images/ansible-logo.svg?classes=inline&width=10vh" style=" height: auto; width: 10vh;" title="Ansible logo"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-a0191c600cd7867fabee28e3c166f363"><img alt="Ansible" class="inline lazy lightbox lightbox-image" loading="lazy" src="/images/ansible-logo.svg?classes=inline&width=10vh" title="Ansible logo"></a></p>
-<p><a href="#R-image-9bfd3e1e9986ede2710bf16f88af9954" class="lightbox-link"><img alt="NodeJS" class="inline lazy lightbox figure-image" loading="lazy" src="/images/nodejs-logo.svg?classes=inline&width=10vh" style=" height: auto; width: 10vh;" title="Node.JS logo"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-9bfd3e1e9986ede2710bf16f88af9954"><img alt="NodeJS" class="inline lazy lightbox lightbox-image" loading="lazy" src="/images/nodejs-logo.svg?classes=inline&width=10vh" title="Node.JS logo"></a></p>
-<p><a href="#R-image-c44f16f1684b735c356c287c360b2f4f" class="lightbox-link"><img alt="Swagger" class="inline lazy lightbox figure-image" loading="lazy" src="/images/swagger-logo.png?classes=inline&width=10vh" style=" height: auto; width: 10vh;" title="Swagger logo"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-c44f16f1684b735c356c287c360b2f4f"><img alt="Swagger" class="inline lazy lightbox lightbox-image" loading="lazy" src="/images/swagger-logo.png?classes=inline&width=10vh" title="Swagger logo"></a></p>
-<p><a href="#R-image-0ebb4488df5e91c2061884e0d4692db0" class="lightbox-link"><img alt="Grafana" class="inline lazy lightbox figure-image" loading="lazy" src="/images/grafana-logo.svg?classes=inline&width=10vh" style=" height: auto; width: 10vh;" title="Grafana logo"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-0ebb4488df5e91c2061884e0d4692db0"><img alt="Grafana" class="inline lazy lightbox lightbox-image" loading="lazy" src="/images/grafana-logo.svg?classes=inline&width=10vh" title="Grafana logo"></a></p>
-<p><a href="#R-image-000e154411eab3f9626058018c246508" class="lightbox-link"><img alt="aws" class="inline lazy lightbox figure-image" loading="lazy" src="/images/aws-logo.svg?classes=inline&width=10vh" style=" height: auto; width: 10vh;" title="AWS logo"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-000e154411eab3f9626058018c246508"><img alt="aws" class="inline lazy lightbox lightbox-image" loading="lazy" src="/images/aws-logo.svg?classes=inline&width=10vh" title="AWS logo"></a></p>
+<p><a href="#R-image-60fabed56b7b48e8f5150af4569ea2f7" class="lightbox-link"><img alt="Docker" class="inline lazy lightbox figure-image" loading="lazy" src="/images/docker-logo.svg?classes=inline&width=10vw" style=" height: auto; width: 10vw;" title="Docker logo"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-60fabed56b7b48e8f5150af4569ea2f7"><img alt="Docker" class="inline lazy lightbox lightbox-image" loading="lazy" src="/images/docker-logo.svg?classes=inline&width=10vw" title="Docker logo"></a></p>
+<p><a href="#R-image-df2fc01afd7082bb0cee2017e5d69c38" class="lightbox-link"><img alt="InfluxDB" class="inline lazy lightbox figure-image" loading="lazy" src="/images/influxdb-logo.svg?classes=inline&width=10vw" style=" height: auto; width: 10vw;" title="InfluxDB logo"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-df2fc01afd7082bb0cee2017e5d69c38"><img alt="InfluxDB" class="inline lazy lightbox lightbox-image" loading="lazy" src="/images/influxdb-logo.svg?classes=inline&width=10vw" title="InfluxDB logo"></a></p>
+<p><a href="#R-image-1ed1721fca3fd25915c2212d1469b167" class="lightbox-link"><img alt="Ansible" class="inline lazy lightbox figure-image" loading="lazy" src="/images/ansible-logo.svg?classes=inline&width=10vh" style=" height: auto; width: 10vh;" title="Ansible logo"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-1ed1721fca3fd25915c2212d1469b167"><img alt="Ansible" class="inline lazy lightbox lightbox-image" loading="lazy" src="/images/ansible-logo.svg?classes=inline&width=10vh" title="Ansible logo"></a></p>
+<p><a href="#R-image-ee528572e1ff9ea443b96919dd761d85" class="lightbox-link"><img alt="NodeJS" class="inline lazy lightbox figure-image" loading="lazy" src="/images/nodejs-logo.svg?classes=inline&width=10vh" style=" height: auto; width: 10vh;" title="Node.JS logo"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-ee528572e1ff9ea443b96919dd761d85"><img alt="NodeJS" class="inline lazy lightbox lightbox-image" loading="lazy" src="/images/nodejs-logo.svg?classes=inline&width=10vh" title="Node.JS logo"></a></p>
+<p><a href="#R-image-7101b9ed520c3bf323eb7cb573fc70c0" class="lightbox-link"><img alt="Swagger" class="inline lazy lightbox figure-image" loading="lazy" src="/images/swagger-logo.png?classes=inline&width=10vh" style=" height: auto; width: 10vh;" title="Swagger logo"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-7101b9ed520c3bf323eb7cb573fc70c0"><img alt="Swagger" class="inline lazy lightbox lightbox-image" loading="lazy" src="/images/swagger-logo.png?classes=inline&width=10vh" title="Swagger logo"></a></p>
+<p><a href="#R-image-f21858036571f20bbedb2b5780b456b7" class="lightbox-link"><img alt="Grafana" class="inline lazy lightbox figure-image" loading="lazy" src="/images/grafana-logo.svg?classes=inline&width=10vh" style=" height: auto; width: 10vh;" title="Grafana logo"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-f21858036571f20bbedb2b5780b456b7"><img alt="Grafana" class="inline lazy lightbox lightbox-image" loading="lazy" src="/images/grafana-logo.svg?classes=inline&width=10vh" title="Grafana logo"></a></p>
+<p><a href="#R-image-5cec25a7c8243d44420e9663cd3948b9" class="lightbox-link"><img alt="aws" class="inline lazy lightbox figure-image" loading="lazy" src="/images/aws-logo.svg?classes=inline&width=10vh" style=" height: auto; width: 10vh;" title="AWS logo"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-5cec25a7c8243d44420e9663cd3948b9"><img alt="aws" class="inline lazy lightbox lightbox-image" loading="lazy" src="/images/aws-logo.svg?classes=inline&width=10vh" title="AWS logo"></a></p>
 
   <footer class="footline">
   </footer>
@@ -326,8 +327,8 @@
 	    </div>
       </div>
     </aside>
-    <script src="/js/clipboard/clipboard.min.js?1757389899" defer></script>
-    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1757389899" defer></script>
-    <script src="/js/theme.min.js?1757389899" defer></script>
+    <script src="/js/clipboard/clipboard.min.js?1757390566" defer></script>
+    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1757390566" defer></script>
+    <script src="/js/theme.min.js?1757390566" defer></script>
   </body>
 </html>
