--- a/public/projects/generate-ai/index.html
+++ b/public/projects/generate-ai/index.html
@@ -21,26 +21,27 @@
     <meta itemprop="description" content="Projects with Aritificial Intelligence">
     <meta itemprop="wordCount" content="154">
     <title>Generative AI :: Pete Myron</title>
-    <link href="/css/auto-complete/auto-complete.min.css?1757389899" rel="stylesheet">
-    <script src="/js/auto-complete/auto-complete.min.js?1757389899" defer></script>
-    <script src="/js/search-lunr.min.js?1757389899" defer></script>
-    <script src="/js/search.min.js?1757389899" defer></script>
+    <link href="/images/favicon.ico?1757390566" rel="icon" type="image/x-icon" sizes="any">
+    <link href="/css/auto-complete/auto-complete.min.css?1757390566" rel="stylesheet">
+    <script src="/js/auto-complete/auto-complete.min.js?1757390566" defer></script>
+    <script src="/js/search-lunr.min.js?1757390566" defer></script>
+    <script src="/js/search.min.js?1757390566" defer></script>
     <script>
       window.relearn = window.relearn || {};
-      window.relearn.index_js_url="/searchindex.en.js?1757389899";
+      window.relearn.index_js_url="/searchindex.en.js?1757390566";
     </script>
-    <script src="/js/lunr/lunr.min.js?1757389899" defer></script>
-    <script src="/js/lunr/lunr.stemmer.support.min.js?1757389899" defer></script>
-    <script src="/js/lunr/lunr.multi.min.js?1757389899" defer></script>
-    <script src="/js/lunr/lunr.en.min.js?1757389899" defer></script>
+    <script src="/js/lunr/lunr.min.js?1757390566" defer></script>
+    <script src="/js/lunr/lunr.stemmer.support.min.js?1757390566" defer></script>
+    <script src="/js/lunr/lunr.multi.min.js?1757390566" defer></script>
+    <script src="/js/lunr/lunr.en.min.js?1757390566" defer></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.contentLangs=['en'];
     </script>
-    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1757389899" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1757389899" rel="stylesheet"></noscript>
-    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1757389899" rel="stylesheet">
-    <link href="/css/theme.min.css?1757389899" rel="stylesheet">
-    <link href="/css/format-html.min.css?1757389899" rel="stylesheet" id="R-format-style">
+    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1757390566" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1757390566" rel="stylesheet"></noscript>
+    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1757390566" rel="stylesheet">
+    <link href="/css/theme.min.css?1757390566" rel="stylesheet">
+    <link href="/css/format-html.min.css?1757390566" rel="stylesheet" id="R-format-style">
     <script>
       window.relearn = window.relearn || {};
       // configuration
@@ -151,12 +152,12 @@
 
 <h3 id="text">TEXT</h3>
 <p>In the early days of OpenAI, I created various agents to integrate GPT3 into somewhat frivilous/fun capacities&ndash;though I would say the experience was a crucial step into applied AI. Though I&rsquo;m pretty bad at reading or typing Braille, I learned the basics enough to write a Golang library connected to an hid USB bit of hardware (Orbit Reader). Later on ChatGPT made this even easier.</p>
-<p><a href="#R-image-9ae92a7c7fc83fcf292155eb63035473" class="lightbox-link"><img alt="Orbit Reader" class="lazy lightbox figure-image" loading="lazy" src="/images/orbit-reader.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-9ae92a7c7fc83fcf292155eb63035473"><img alt="Orbit Reader" class="lazy lightbox lightbox-image" loading="lazy" src="/images/orbit-reader.png"></a></p>
+<p><a href="#R-image-9e362effab3395e5cbb74e355d2b1bf3" class="lightbox-link"><img alt="Orbit Reader" class="lazy lightbox figure-image" loading="lazy" src="/images/orbit-reader.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-9e362effab3395e5cbb74e355d2b1bf3"><img alt="Orbit Reader" class="lazy lightbox lightbox-image" loading="lazy" src="/images/orbit-reader.png"></a></p>
 <h3 id="images">IMAGES</h3>
 <p>I&rsquo;ve been working with applied image generation before it was cool and normal. Dalle and Dalle2 brought enormous amounts of fun and new adjacent possibilities, sparking in me a lot of novel applications that are now patent pending. Along the way, learning how to use the tools and how they can apply, something beautiful happened&hellip; I call it &lsquo;Barbie Pete&rsquo;:</p>
-<p><a href="#R-image-f3398de2e2ccfdd7adfa7fe7314c1666" class="lightbox-link"><img alt="Barbie Pete" class="lazy lightbox figure-image" loading="lazy" src="/images/barbie-pete/montage.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-f3398de2e2ccfdd7adfa7fe7314c1666"><img alt="Barbie Pete" class="lazy lightbox lightbox-image" loading="lazy" src="/images/barbie-pete/montage.png"></a></p>
+<p><a href="#R-image-9821bf7aaa649cd5b4fbf434d5160cee" class="lightbox-link"><img alt="Barbie Pete" class="lazy lightbox figure-image" loading="lazy" src="/images/barbie-pete/montage.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-9821bf7aaa649cd5b4fbf434d5160cee"><img alt="Barbie Pete" class="lazy lightbox lightbox-image" loading="lazy" src="/images/barbie-pete/montage.png"></a></p>
 <p>While the technology has advanced rapidly since then, and I know these images shouldn&rsquo;t be considered great anymore, they still hold a special place in my journey.</p>
 
   <footer class="footline">
@@ -302,8 +303,8 @@
 	    </div>
       </div>
     </aside>
-    <script src="/js/clipboard/clipboard.min.js?1757389899" defer></script>
-    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1757389899" defer></script>
-    <script src="/js/theme.min.js?1757389899" defer></script>
+    <script src="/js/clipboard/clipboard.min.js?1757390566" defer></script>
+    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1757390566" defer></script>
+    <script src="/js/theme.min.js?1757390566" defer></script>
   </body>
 </html>
